--- a/report.tex
+++ b/report.tex
@@ -25,12 +25,13 @@
 $a_i = b_i + x^2$
 \end{verbatim}
 
-Или этот документ
+Или целиком этот документ.
 
 \section{Ход работы}
- 
-Ход работы
- 
+
+Выбрано подмножество TeX, включающее в себя функции, секции, блоки и немного математических операций.
+Для отображения математических символов и операций ипользуется MathJax.
+
 \section{Примеры}
 
 \subsection{Числа и переменные}
@@ -56,12 +57,16 @@ Or, using a more mathematical approach: $a^2 + b^{2} = c^2$.
 
 100 $m^{3}$ of water.
 
-$\lim_{x \to 6}{6}$
+$x_{1} + x_{1} = 2 * x_{1}$
+
+$\lim_{x \to 6}{x} = 6$
 
 $\lim_{n \to \infty}{1/n} = \frac{\pi^2}{6} * 0$
 
 $\sum_{k=1}^{5}{k} = \frac{60}{2}/2$
 
-$\lim_{x \to \infty}{x} = \infty$
+${5^{\frac{1}{x}} = A}_{y} - \frac{1}{2 + \frac{3}{4 + \frac{5}{c}}} + \sum_{i=1}^{5}{i^{2*i}}$
+
+$\int_{\frac{\pi}{2}}^{\infty}$
  
 \end{document}
