--- a/report.tex
+++ b/report.tex
@@ -68,5 +68,21 @@ $\sum_{k=1}^{5}{k} = \frac{60}{2}/2$
 ${5^{\frac{1}{x}} = A}_{y} - \frac{1}{2 + \frac{3}{4 + \frac{5}{c}}} + \sum_{i=1}^{5}{i^{2*i}}$
 
 $\int_{\frac{\pi}{2}}^{\infty}$
+
+\subsection{Дополнительное задание}
+
+Минимум
+
+$\min X$
+
+Минимум с нижним индексом
+
+$\min_{subscript} x$
+
+limits для суммы и интеграла
+
+$\sum\limits_{k=1}^{5}{k} = 15$
+
+$\int\limits_{\frac{\pi}{2}}^{\infty}$
  
 \end{document}
