--- a/report.tex
+++ b/report.tex
@@ -14,7 +14,7 @@
 \maketitle
 
 \section{Задание}
-\subsection{Вариант 8.}
+\subsection{Вариант 8}
  
 Выберите подмножетсво TeX и напишите его конвертор в HTML.
 При необходимости используйте MathML.
